# zero2prod-axum

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230320123217_create_subscriptions_table.sql  20230327063949_add_status_to_subscriptions.sql  20230327065907_make_status_not_null_in_subscriptions.sql  20230331185405_seed_user.sql  20230405151436_create_idempotency_table.sql  20230406151333_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: authentication.rs  health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
