[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Sergei Liashko <serjfv@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention # We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
# We can only have one library in a project, but we can have multiple binaries!
path = "src/main.rs"
name = "zero2prod"


[dependencies]
axum="0.6.11"
tokio = {version = "1.26.0", features=["full"]}
hyper = {version = "0.14.25", features=["client"]}
serde = {version = "1.0.158", features=["derive"]}
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1",features=["log"]}
tracing-subscriber = {version = "0.3.16", features=["registry", "env-filter"]}
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.18.0"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tower-http = { version = "0.4", features = ["util", "trace", "cors", "request-id"] }
tower = { version = "0.4" }



[dependencies.sqlx] 
version = "0.6"
default-features = false 
features = [
"runtime-tokio-rustls", "macros",
"postgres",
"uuid",
"chrono",
"migrate"
]


[dev-dependencies]
pretty_assertions = "1"
